# tree_visualization

./: .gitignore  CMakeLists.txt
include/: avl_tree.h  doubly_linked_list.h  stack.h  tree.h  tree_queue.h  tree_stack.h  ui_stuff.h
src/: avl_tree.c  doubly_linked_list.c  main.c  stack.c  tree.c  tree_queue.c  tree_stack.c  ui_stuff.c
